# funcroute

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: index.html
examples/: CLI_EXAMPLES.md  README.md  SIMPLE_EXAMPLE_GUIDE.md  async_prediction_example.py  batch_prediction_example.py  caching_example.py  evaluation_example.py  server_example.py  simple_example.py  streaming_prediction_example.py  synthetic_data_example.py  test_imports.py
funcroute/: __init__.py  cli.py
funcroute/core/: __init__.py  config.py  router.py
funcroute/data/: __init__.py  formatter.py  generator.py  loader.py  splitter.py  validator.py
funcroute/evaluation/: __init__.py  evaluator.py  metrics.py  visualizer.py
funcroute/inference/: __init__.py  cache.py  predictor.py  server.py
funcroute/training/: __init__.py  trainer.py
tests/: __init__.py
tests/test_data/: test_formatter.py  test_generator.py  test_splitter.py  test_validator.py
tests/test_evaluation/: __init__.py  test_evaluator.py  test_metrics.py
tests/test_inference/: __init__.py  test_cache.py  test_predictor.py
